--- a/PhoenixMultiplayer/servidor/servidor.vcxproj
+++ b/PhoenixMultiplayer/servidor/servidor.vcxproj
@@ -93,7 +93,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>"C:\Users\Emanuel\Desktop\New folder\Trabalho-Pratico\SO2\PhoenixMultiplayer\Debug\dll.lib"</AdditionalDependencies>
+      <AdditionalDependencies>C:\Users\mauri\Documents\GitHub\SO2\PhoenixMultiplayer\Debug\dll.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
